<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.st.stplayer.StVideoView
        android:id="@+id/mVideoView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:render_type="gl_texture" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mVideoView">

        <RadioButton
            android:id="@+id/scale_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_auto" />

        <RadioButton
            android:id="@+id/scale_4_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_4_3" />

        <RadioButton
            android:id="@+id/scale_16_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_16_9" />

        <RadioButton
            android:id="@+id/scale_match_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_match_parent" />

        <RadioButton
            android:id="@+id/scale_center_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_center_crop" />

        <RadioButton
            android:id="@+id/scale_orignal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale_orignal" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>