<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/full_screen_back"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:scaleType="centerInside"
        android:padding="10dp"
        android:src="@drawable/st_video_component_back"
        android:contentDescription="back" />

    <TextView
        android:id="@+id/full_screen_title"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/full_screen_back"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dip">

        <ImageView
            android:id="@id/st_player_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/st_video_component_prev"
            android:contentDescription="pre" />

        <ImageView
            android:id="@id/st_player_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/st_video_component_pause"
            android:contentDescription="@string/pause" />

        <ImageView
            android:id="@id/st_player_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/st_video_component_next"
            android:contentDescription="@string/next" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/st_player_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@id/st_player_loading_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="12sp" />
    </LinearLayout>

    <ImageView
        android:id="@id/st_player_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:src="@drawable/st_video_component_unlock"
        android:contentDescription="@string/lock" />

    <ImageView
        android:id="@id/st_player_more_menu"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:scaleType="centerInside"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/st_video_component_more"
        android:contentDescription="@string/more" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@id/st_player_time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <SeekBar
            android:id="@id/st_player_mediacontroller_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dip"
            android:layout_height="32dip"
            android:layout_weight="1" />

        <TextView
            android:id="@id/st_player_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>